// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article integration DELETE /api/articles/:slug with a logged in user and a valid slug and the user is not the author should return a 403 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Forbidden",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Forbidden",
          "message": "Forbidden",
          "statusCode": 403,
        },
        "statusCode": 403,
      },
    },
    "message": "Forbidden",
  },
}
`;

exports[`article integration DELETE /api/articles/:slug with a logged in user and a valid slug and the user is the author should return a 200 1`] = `Object {}`;

exports[`article integration DELETE /api/articles/:slug with a logged in user and an invalid slug should return a 404 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Not Found",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Not Found",
          "message": "Not Found",
          "statusCode": 404,
        },
        "statusCode": 404,
      },
    },
    "message": "Not Found",
  },
}
`;

exports[`article integration DELETE /api/articles/:slug without a logged in user should return a 401 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "code": "credentials_required",
      "data": Object {
        "UnauthorizedError": Array [
          "No authorization token was found",
        ],
      },
      "inner": Object {
        "message": "No authorization token was found",
      },
      "isBoom": true,
      "isServer": false,
      "message": "No authorization token was found",
      "name": "UnauthorizedError",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Unauthorized",
          "message": "No authorization token was found",
          "statusCode": 401,
        },
        "statusCode": 401,
      },
      "status": 401,
    },
    "message": "No authorization token was found",
  },
}
`;

exports[`article integration GET /api/articles/:slug with a logged in user and an invalid slug should return a 404 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Not Found",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Not Found",
          "message": "Not Found",
          "statusCode": 404,
        },
        "statusCode": 404,
      },
    },
    "message": "Not Found",
  },
}
`;

exports[`article integration GET /api/articles/:slug without a logged in user and an invalid slug should return a 404 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Not Found",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Not Found",
          "message": "Not Found",
          "statusCode": 404,
        },
        "statusCode": 404,
      },
    },
    "message": "Not Found",
  },
}
`;

exports[`article integration POST /api/articles without a logged in user should return a 401 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "code": "credentials_required",
      "data": Object {
        "UnauthorizedError": Array [
          "No authorization token was found",
        ],
      },
      "inner": Object {
        "message": "No authorization token was found",
      },
      "isBoom": true,
      "isServer": false,
      "message": "No authorization token was found",
      "name": "UnauthorizedError",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Unauthorized",
          "message": "No authorization token was found",
          "statusCode": 401,
        },
        "statusCode": 401,
      },
      "status": 401,
    },
    "message": "No authorization token was found",
  },
}
`;

exports[`article integration PUT /api/articles/:slug with a logged in user and a valid slug and the user is not the author should return a 403 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Forbidden",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Forbidden",
          "message": "Forbidden",
          "statusCode": 403,
        },
        "statusCode": 403,
      },
    },
    "message": "Forbidden",
  },
}
`;

exports[`article integration PUT /api/articles/:slug with a logged in user and an invalid slug should return a 404 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Not Found",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Not Found",
          "message": "Not Found",
          "statusCode": 404,
        },
        "statusCode": 404,
      },
    },
    "message": "Not Found",
  },
}
`;

exports[`article integration PUT /api/articles/:slug without a logged in user should return a 401 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "code": "credentials_required",
      "data": Object {
        "UnauthorizedError": Array [
          "No authorization token was found",
        ],
      },
      "inner": Object {
        "message": "No authorization token was found",
      },
      "isBoom": true,
      "isServer": false,
      "message": "No authorization token was found",
      "name": "UnauthorizedError",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Unauthorized",
          "message": "No authorization token was found",
          "statusCode": 401,
        },
        "statusCode": 401,
      },
      "status": 401,
    },
    "message": "No authorization token was found",
  },
}
`;
